Resolve last remarks with gap and min height

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   list-style: none;
+  gap: 25px;
 }
 
 .card {
@@ -153,6 +154,7 @@
   width: 334px;
   position: relative;
   z-index: 0;
+  min-height: 563px;
 }
 
 .card__bg-image {
